[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-ccusage-view"
version = "0.1.0"
description = "See what each Codex thread costs, with readable titles instead of rollout IDs."
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Bence Damokos" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]

[project.scripts]
codex-ccusage-view = "codex_ccusage_view:main"

[tool.setuptools]
py-modules = ["codex_ccusage_view"]
